Fixed layout so no elements were overlaping on the cards

--- a/style.css
+++ b/style.css
@@ -40,7 +40,8 @@ main {
 	position: relative;
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	align-items: start;
+	gap: 20px;
 	width: 100%;
 	height: auto;
 	min-height: 200px;
@@ -48,7 +49,7 @@ main {
 	opacity: 0.9;
 	border: 2px solid var(--accent);
 	border-radius: 5px;
-	padding: 10px;
+	padding: 20px 10%;
 	transition: opacity 0.3s, transform 0.3s;
 }
 
@@ -72,7 +73,7 @@ main {
 	flex-direction: column;
 	flex-shrink: 0;
 	background: var(--primary);
-	border: 2px solid var(--border);
+	border: 1px solid var(--border);
 	border-radius: 5px;
 	text-align: center;
 }
@@ -108,7 +109,7 @@ main {
 
 /* The preview wrap */
 .preview-wrap {
-	position: absolute;
+	/* position: absolute; */
 	max-width: 100%;
   max-height: 100%;
   object-fit: cover; /* Ensures the image covers the container while maintaining aspect ratio */
@@ -133,6 +134,12 @@ main {
 	z-index: 3;
 }
 
+.face .preview-wrap svg {
+	width: 50%;
+	height: 50%;
+	padding: 10%;
+}
+
 .preview-wrap:hover svg {
 	visibility: visible;
 	opacity: 1;
@@ -149,38 +156,56 @@ main {
 	display: none;
 	max-width: 100%;
 	height: auto;
-	max-height: 300px;
+	max-height: 500px;
+	border-radius: 5px;
+	/* object-fit: contain; */
 	margin: auto;
 }
 
 /* Main styling */
 .input-group.main {
-	width: 80%;
-	height: 200px;
+	width: 100%;
+	height: auto;
+	align-self: center;
 }
 
+/* Main styling */
+.input-group.main img {
+	width: 100%;
+	height: auto;
+	border: 1px solid var(--accent);
+}
 
 /* Face styling */
 .input-group.face {
-	width: 100px;
-	height: 100px;
+	width: 20%;
+	aspect-ratio: 1 / 1;
 	border-radius: 999px;
 	overflow: hidden;
+}
+
+.input-group.face.active {
+  border: 1px solid var(--accent);
 }
 
 .input-group.face .preview-wrap {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	flex-shrink: 0;
 	border-radius: 999px;
+	overflow: hidden;
 }
 
 .input-group.face .preview-wrap img {
 	max-width: none;
 	width: 100%;
-	height: 100%;
-	border-radius: 999px;
+	aspect-ratio: 1 / 1;
 	object-fit: cover;
+	position: relative;
+	top: 50%;
+	left: 50%;
+	translate: -50% -50%;
 }
 
 
@@ -200,20 +225,20 @@ main {
 
 .license-plate {
 	width: 60%;
-	height: fit-content;
+	/* height: fit-content; */
 	display: flex;
 	align-items: center;
 	justify-content: center;
 }
 
 .license-plate img {
-	width: 90%;
+	width: 100%;
 }
 
 .license-plate .license-input {
 	position: absolute;
 	z-index: 1;
-	width: 90%;
+	width: 100%;
 	font-family: 'Oswald', sans-serif;
 	/* font-size: 1em; */
 	outline: none;
